// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user list item render correctly with role 1`] = `
<div
  className="sc-AxiKw jxeMgG"
>
  <p
    className="sc-AxhCb klGZiV"
  >
    test
  </p>
  <p
    className="sc-AxhUy hvjDNC"
  >
    admin
  </p>
</div>
`;

exports[`user list item render correctly without role 1`] = `
<div
  className="sc-AxiKw jxeMgG"
>
  <p
    className="sc-AxhCb klGZiV"
  >
    test
  </p>
</div>
`;
